scenario/nginx-test/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: nginx
