scenario/nginx-test/03-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: nginx-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
  - host: nginx.monlog.ir
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 80
